# lookinfo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lookinfo  lookinfo.cpp  plan.md  weather  weather.cpp  weather.hpp  weather_test  weather_test.cpp
data/: quotes.txt
include/: IService.hpp  batteryService.hpp  fileHandler.hpp  memoryService.hpp  pathFinder.hpp  quoteService.hpp  scheduler.hpp  wallpaper.hpp  weather.hpp
src/: batteryService.cpp  fileHandler.cpp  main.cpp  memoryService.cpp  pathFinder.cpp  quoteService.cpp  scheduler.cpp  wallpaper.cpp  weather.cpp
trash/: lookinfo.cpp  weather_test.cpp
